--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
   "author": "gauddel",
   "license": "ISC",
   "devDependencies": {
+    "@gelatonetwork/core": "^0.6.0",
+    "@nomiclabs/buidler-ganache": "^1.3.3",
     "@nomiclabs/buidler": "^1.4.7",
     "@nomiclabs/buidler-ethers": "^2.0.0",
     "@nomiclabs/buidler-waffle": "^2.1.0",
     "chai": "^4.2.0",
     "ethereum-waffle": "^3.1.0",
-    "ethers": "^5.0.13"
+    "ethers": "^5.0.13",
+    "dotenv": "^8.2.0"
   },
-  "dependencies": {
-    "@gelatonetwork/core": "^0.6.0",
-    "@nomiclabs/buidler-ganache": "^1.3.3"
-  }
+  "dependencies": {}
 }
