--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "gauddel",
   "license": "ISC",
   "devDependencies": {
+    "@chainlink/contracts": "0.0.8",
     "@gelatonetwork/core": "^0.6.0",
     "@nomiclabs/buidler-ganache": "^1.3.3",
     "@nomiclabs/buidler": "^1.4.7",
@@ -20,5 +21,7 @@
     "ethers": "^5.0.13",
     "dotenv": "^8.2.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@openzeppelin/contracts": "^3.2.0"
+  }
 }
