--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
   "devDependencies": {
     "@chainlink/contracts": "0.0.8",
     "@gelatonetwork/core": "^0.6.0",
-    "@nomiclabs/buidler-ganache": "^1.3.3",
     "@nomiclabs/buidler": "^1.4.7",
     "@nomiclabs/buidler-ethers": "^2.0.0",
+    "@nomiclabs/buidler-ganache": "^1.3.3",
     "@nomiclabs/buidler-waffle": "^2.1.0",
     "chai": "^4.2.0",
+    "dotenv": "^8.2.0",
     "ethereum-waffle": "^3.1.0",
-    "ethers": "^5.0.13",
-    "dotenv": "^8.2.0"
+    "ethers": "^5.0.13"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^3.2.0"
