--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "ethers": "^5.0.13"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^3.2.0"
+    "@openzeppelin/contracts": "^3.2.0",
+    "@uniswap/lib": "^1.1.4",
+    "@uniswap/v2-core": "^1.0.1",
+    "@uniswap/v2-periphery": "^1.1.0-beta.0"
   }
 }
