--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@openzeppelin/contracts": "^3.2.0",
     "@uniswap/lib": "^1.1.4",
     "@uniswap/v2-core": "^1.0.1",
-    "@uniswap/v2-periphery": "^1.1.0-beta.0"
+    "@uniswap/v2-periphery": "^1.1.0-beta.0",
+    "buidler-deploy": "^0.6.0-beta.16"
   }
 }
