--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ethers": "^5.0.13"
   },
   "dependencies": {
+    "@nomiclabs/buidler-etherscan": "^2.1.0",
     "@openzeppelin/contracts": "^3.2.0",
     "@uniswap/lib": "^1.1.4",
     "@uniswap/v2-core": "^1.0.1",
